css/global.css
@import "nav.css";
@import "table.css";
@import "fonts.css";

html {
    --nav-background-color: #FFCC99;
    --nav-background-highlight-color: #FFDD99;
    --main_padding-left: 0.8rem;
    --main_padding-right: 0.8rem;
    height: 100%;
}

body {
    display: flex;
    flex-flow: column;
    min-height: 100%;
    font-family: "Liberation Serif", "DejaVu Sans", serif;
}

video, audio {
    max-width: 100%;
    max-height: 100%;
}

.scroll {
    overflow: auto;
}

.scroll.contains-table {
    margin-left: 1em;
}

.scroll.contains-table > table {
    margin: 0;
}

.nowrap {
    white-space: nowrap;
}

.fit-content {
    display: table;
    margin-left: auto;
    margin-right: auto;
}

section {
    max-width: 100%;
    margin: 2.5em auto;
    padding: 0.8em 0 0;
}

header h1 {
    text-align: center;
    margin: 0 auto 1em;
}

header .description {
    margin: -1.3em 0 0;
}


main {
    position: relative;
    padding-left: var(--main_padding-left);
    padding-right: var(--main_padding-right);
    margin-top: 3em;
    margin-bottom: 2.5em;
}

#page-header {
    text-align: center;
    margin: 0 auto 1em;
    font-family: "Kaushan Script", serif;
}

#page-header h1 {
    margin: 0;
    padding: 0;
    font-weight: bolder;
    font-size: 3em;
    line-height: 1.2em;
    letter-spacing: 0.05em;
    word-spacing: 0.1em;
}

@media (max-width: 16em) {
    #page-header h1 {
        font-size: 16vw;
        line-height: 1.2em;
    }
}

#page-header h1 a {
    text-decoration: none;
}

#page-header p {
    padding: 0;
    margin: 0;
    line-height: 1.15em;
}

#page-header p + p {
    margin-top: 0.25em;
}

#page-header .description {
    font-size: large;
    margin-top: 0.5em;
}


@media (max-width: 24em) {
    html {
        --main_padding-left: 0.5rem;
        --main_padding-right: 0.5rem;
    }

    main {
        margin-top: 1.5em;
    }

    #page-header h1 {
        font-size: 16vw;
    }

    #page-header .description {
        margin-top: 4vw;
    }

    .navtable th a, .navtable td a {
        padding-left: 0.3em;
        padding-right: 0.3em;
    }

    table.contains-direct-links th.direct-link a {
        padding-left: 0;
        padding-right: 0.2em;
    }

}


dt {
    margin: 1.5em 0 0 1.8em;
    font-size: large;
}

dt + dt {
    margin-top: 0.5em;
}

dt a {
    text-decoration: none;
}

dd {
    margin-left: 2em;
}

dd p:first-child {
    margin-top: 0.25em;
}

dd p {
    margin: 0.8em 1.5em;
}

@media (max-width: 36em) {
    dd p {
        margin-left: 0;
        margin-right: 0;
    }
}

dd ul, dd ol {
    margin: 0.8em 3.5em;
}

dd ul li, dd ol li {
    margin-top: 0.4em;
    margin-bottom: 0.4em;
}


h1 a {
    text-decoration: none;
}

ul {
    margin: 1em 2em;
}


.notice {
    display: flex;
    flex-flow: row;
    align-items: center;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    max-width: 40em;
    padding: 0.2rem 0.4rem;
    border: solid thick transparent;
    margin: 0.5em auto;
    text-align: center;
    clear: both;
}

.notice + table {
    margin-top: 2em;
}

.notice > b {
    flex: none;
    font-size: 3em;
    line-height: 1em;
    text-align: center;
    padding: 0.2rem 0.4rem;
}

.notice > div {
    flex: 1 1 auto;
    padding: 0.2rem 0.4rem;
}

.notice > div p {
    line-height: 1.4em;
    padding: 0;
    margin: 0.6em 0;
}

.notice.good-news {
    border-color: green;
}

.notice.good-news > b {
    color: green;
    font-weight: normal;
}

.notice.warning {
    border-color: orange;
}

.notice.warning > b {
    color: orange;
}

.notice.error {
    border-color: red;
}

.notice.error > b {
    color: red;
    font-family: "DejaVu Sans Mono", monospace;
}

.notice.note {
    border-color: lightslategray;
}

.notice.note > b {
    color: lightslategray;
    padding-left: 1rem;
    padding-right: 1rem;
}


p {
    margin: 1em 0;
    line-height: 1.4em;
}

main section p, main section pre, main section > * > li {
    overflow-x: auto;
}


.panel {
    position: relative;
    border: solid medium #AAAAAA;
    background: #ECECEC;
}


h1 {
    margin-top: 1em;
    position: relative;
}


li + li {
    margin-top: 0.5em;
}

li li {
    margin-bottom: 0.25em;
}

.modifier-key, .emacs-command {
    border: solid thin #CCCCCC;
    background-color: #EEEEEE;
    color: #444444;
    padding: 0.2em 0.3em;
}


.good-news {
    color: green;
}

.caution {
    color: orange;
}

.watch-out {
    color: red;
}

.good-news a, .watch-out a {
    color: inherit;
}

a.tweet {
    color: cadetblue;
}

.quick-note {
    display: table;
    text-align: center;
    line-height: 1.6em;
    margin: 0.8em auto;
}

.state-warning {
    text-align: center;
    color: red;
    font-weight: bold;
}


.multiline-parentheses {
    display: table;
    margin-left: auto;
    margin-right: auto;
    background-image: url("images/left-parenthese.svg"), url("images/right-parenthese.svg");
    background-repeat: no-repeat;
    background-position: 0% 50%, 100% 50%;
    background-size: 100% 100%, 100% 100%;
    padding: 0.6em 1.2em;
}

.multiline-parentheses .multiline-parenthese {
    display: none;
}


p.status-indicator {
    display: table;
    white-space: nowrap;
    letter-spacing: 0.1em;
    padding: 0.2em 0.5em;
    border: thin solid;
    margin-left: auto;
    margin-right: auto;
    opacity: 0.6;
}

.status-indicator.ready,
.status-indicator.detailed {
    color: green;
}

.status-indicator.incomplete,
.status-indicator.outdated,
.status-indicator.trivial,
.status-indicator.raw {
     color: orange;
}

.status-indicator.stub {
    color: red;
}


sup, sub {
    vertical-align: baseline;
    position: relative;
    top: -0.4em;
}

sub {
    top: 0.4em;
}


html:before {
    display: none;
    content: "";
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: black;
    background-image: url("https://global.hexstreamsoft.com/css/images/owl-of-disapproval.png");
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: contain;
    z-index: 1000;
}
p
html:after {
    display: none;
    content: "Y U NO WIDER??";
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    font-size: 20vw;
    line-height: 1.2em;
    text-align: center;
    font-weight: bold;
    color: red;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    background-color: black;
    z-index: 1001;
}

.emoji {
    white-space: nowrap;
}

